# extrinsics_calibrator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
config/: checkerboard_extrinsics_calib.yaml  extrinsics_calib.yaml
include/extrinsics_calibrator/: Cal3DS3.h  CheckerboardExtrinsicCalibration.h  CheckerboardFactorPPPC.h  CheckerboardPoseProjectionFactor.h  ExtrinsicCalibration.h  ExtrinsicCalibrationRosWrapper.h  FiducialObject.h  FiducialPoseProjectionFactor.h  FiducialProjectionFactor.h
launch/: extrinsics.launch  gazebo_checkerboard.launch
models/checkerboard_5_7_0_08/: checkerboard.sdf  model.config
nodes/: centered_mocap_rebroadcaster.py  checkerboard_based_calib.py  generate_checkerboard_model.py  odom_camera_latency_detector.py  sync.py  test_checkerboard_calib.py  visualise_with_mocapped_tag.py
src/: Cal3DS3.cpp  CheckerboardExtrinsicCalibration.cpp  ExtrinsicCalibPyModules.cpp  extrinsics_calibrator_node.cpp
urdf/: simple_rgbd_cam.gazebo  simple_rgbd_cam.xacro
worlds/: checkerboard_world.world
