<?xml version="1.0"?>
<package>
  <name>extrinsics_calibrator</name>
  <version>0.0.1</version>
  <description>A package to perform extrinsics calibration using AprilTags</description>

  <maintainer email="kumarsha@cs.cmu.edu">Kumar Shaurya Shankar</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>gtsam_catkin</build_depend>
  <build_depend>pybind11_catkin</build_depend>
  <build_depend>apriltag_tracker</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>gtsam_catkin</run_depend>
  <run_depend>pybind11_catkin</run_depend>
  <run_depend>apriltag_tracker</run_depend>
</package>
